fixing styling for home so there's no overflow

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,17 +1,12 @@
-.Home-Header {
+.Home-Recipes {
   background-image: url("https://img.freepik.com/free-vector/cheese-isolated-cartoon-art-illustration_56104-624.jpg?w=2000");
   animation: bg-animation 5s infinite;
   background-size: 550px;
   background-position: center;
   width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
   font-family: 'https://fonts.googleapis.com/css?family=Actor';
-  align-items: auto;
-  justify-content: center;
-  border-radius: 50%;
-  cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🐭</text></svg>") 16 0,auto;
+  border-radius: 20%;
+  padding-bottom: 30px;
 }
 
 @keyframes bg-animation {
@@ -20,25 +15,30 @@
   100% {background-position: 0 0;}
 }
 
+.Home-Header {
+  cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🐭</text></svg>") 16 0,auto;
+  padding-bottom: 50px;
+}
+
 .Home-Header h1 {
-  font-size: 4rem;
-  font-weight: bold;
-  color: white;
-  text-shadow: 2px 2px 4px #000000;
+  font-size: 30px;
+  color: black;
   margin-bottom: 2rem;
   font-family: 'https://fonts.googleapis.com/css?family=Actor';
 }
 
+.Home-h3 {
+  padding-top: 50px;
+}
+
 .Home-Header h3 {
-  font-size: 2rem;
-  font-weight: bold;
-  color: white;
-  text-shadow: 2px 2px 4px #000000;
-  margin-bottom: 1rem;
+  font-size: 20px;
+  /* font-weight: bold; */
+  color: black;
+  /* text-shadow: 2px 2px 4px #000000; */
   font-family: 'https://fonts.googleapis.com/css?family=Actor';
 }
 
 span {
   color: #ff5a5f;
 }
-  
